--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,10 @@ readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
 ]
+license = {text = "Apache-2.0"}
 dependencies = [
     "googlemaps==4.10.0",
     "python-dotenv==1.1.0"
